refactor: small method call fix for simplicity