@@ -10,9 +10,7 @@ import jakarta.validation.Valid;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
-
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/account")
@@ -29,7 +27,7 @@ public class AccountHolderController {
         List<AccountHolder> list = accountHolderService.getAllHolders();
         List<AccountHolderResponse> responseList = list.stream()
                 .map(AccountHolderMapper::toResponse)
-                .collect(Collectors.toList());
+                .toList();
 
         return ResponseEntity.ok(responseList);
     }
